# lib_jbig

./: .gitignore  CMakeLists.txt  README.md  jbig.h  jbig85.h  jbig_ar.h
cmake/: util.cmake
libjbig/: jbig.def
